--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@metamask/providers": "^14.0.2",
+    "@types/readable-stream": "^4.0.10",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "web3": "^4.4.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
