--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "dex-rumble": {
+    "rumble-dapp": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/dex-rumble",
+            "outputPath": "dist/rumble-dapp",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -30,8 +30,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/bootstrap-icons/font/bootstrap-icons.min.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -66,10 +65,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "dex-rumble:build:production"
+              "browserTarget": "rumble-dapp:build:production"
             },
             "development": {
-              "browserTarget": "dex-rumble:build:development"
+              "browserTarget": "rumble-dapp:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -77,7 +76,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "dex-rumble:build"
+            "browserTarget": "rumble-dapp:build"
           }
         },
         "test": {
